# bonsai-ceramic-demo

./: .gitignore  Cargo.toml
contracts/: Consumer.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
relay/: Cargo.toml
relay/examples/: commit_validity.rs  data_bridge.rs  validation.json
script/: Deploy.s.sol
