[workspace]
members = ["methods", "relay"]
resolver = "2"

[workspace.dependencies]
risc0-build = { version = "0.19.1" }
risc0-zkvm = { version = "0.19.1", default-features = false }
bonsai-sdk = { version = "0.5.1" }
bonsai-ethereum-relay = { version = "0.5.1" }
methods = { path = "./methods", package = "ceramic-check-methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[patch.'https://github.com/ceramicnetwork/rust-ceramic']
ceramic-core = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
ceramic-kubo-rpc-server = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

[patch.'https://github.com/3box/rust-ceramic']
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

[patch.'https://github.com/3box/ceramic-http-client-rs']
ceramic-http-client = { git = "https://github.com/dataverse-os/ceramic-http-client-rs", branch = "patch-methods" }