[package]
name = "bonsai-ethereum-relay-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.4"
alloy-sol-types = "0.4"
anyhow = "1.0"
bincode = "1.3"
bonsai-ethereum-relay = { workspace = true }
bonsai-sdk = { workspace = true, features = ["async"] }
bytemuck = "1.13.1"
ceramic-core = { git = "https://github.com/ceramicnetwork/rust-ceramic", branch = "main" }
clap = { version = "4.4", features = ["derive", "env"] }
dataverse-ceramic = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
dataverse-file-system = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}
ethabi = { version = "18.0", default-features = false }
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-signers = { version = "2.0", features = ["aws"] }
hex = "0.4.3"
methods = { workspace = true }
risc0-build = { workspace = true, features = ["guest-list"] }
risc0-zkvm = { workspace = true, default-features = false }
tokio = { version = "1.19", features = ["full", "sync"] }
