[package]
name = "check-validity-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_validity"
path = "src/bin/check_validity.rs"

[dependencies]
ethabi = { version = "18.0", default-features = false }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
dataverse-file-system = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
