# [package]
# name = "ceramic-check-guest"
# version = "0.1.0"
# edition = "2021"

# [[bin]]
# name = "check_commit_validity"
# path = "src/bin/check_commit_validity.rs"

# [dependencies]
# ethabi = { version = "18.0", default-features = false }
# # Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
# radium = { version = "1.0.0-rc3" }
# risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
# # ceramic-core = { git = "https://github.com/ceramicnetwork/rust-ceramic", branch = "main" }
# # dataverse-ceramic = { git = "https://github.com/dataverse-os/network-crates", branch = "main" }
# # dataverse-file-system = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}
# serde_json = "1.0.108"
# anyhow = "1.0.75"
# tokio = { version = "1.35.1", features = ["full"] }
# futures = { version = "0.3.29", features = ["executor"] }
# futures-util = "0.3.29"

# [patch.crates-io]
# radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

# # [patch.'https://github.com/ceramicnetwork/rust-ceramic']
# # ceramic-core = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
# # ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
# # ceramic-kubo-rpc-server = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

# # [patch.'https://github.com/3box/rust-ceramic']
# # ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

# # [patch.'https://github.com/3box/ceramic-http-client-rs']
# # ceramic-http-client = { git = "https://github.com/dataverse-os/ceramic-http-client-rs", branch = "patch-methods" }

# [profile.release]
# lto = true
# opt-level = 3

# [workspace]
[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_commit_validity"
path = "src/bin/check_commit_validity.rs"

[dependencies]
ethabi = { version = "18.0", default-features = false }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
